<resources>
    <string name="app_name">CataraVinhos</string>
    <string name="headerLogin">CataraVino</string>
    <string name="menu_description">Botão de menu</string>
    <string name="logo_description">Logo do aplicativo</string>
    <string name="search_hint">Buscar vinho</string>
    <string name="cart_description">Botão do carrinho</string>
    <string name="wines_menu_item">Vinhos +</string>
    <string name="genres_menu_item">Gêneros +</string>
    <string name="contact_menu_item">Contato para o vendedor +</string>
    <string name="learn_more_button">Saiba mais →</string>
    <string name="entrar">Entrar</string>
    <string name="period_prompt">Selecione o Período</string>
    <string name="client_prompt">Selecione o Cliente</string>
    <string name="region_prompt">Selecione a Região</string>
    <string name="seller_prompt">Selecione o Vendedor</string>

    <string name="historia">No coração das terras mais férteis, nasceu o CataraVino, fruto da dedicação de uma família apaixonada pela arte de fazer vinho.\n\nDesde os tempos dos nossos antepassados, a tradição da vinicultura corre em nossas veias. Cada parreira plantada, cada safra colhida e cada garrafa aberta contam uma história de amor, respeito e compromisso com a natureza e com a cultura do vinho.\n\nAo longo das décadas, a Família Vieira transformou o CataraVino em muito mais do que uma vinícola: somos guardiões de um legado. Combinamos técnicas ancestrais herdadas de nossos avós com a inovação do mundo moderno, garantindo vinhos de personalidade única, que encantam paladares exigentes e celebram momentos especiais.\n\nNosso terroir é sagrado. Nossas uvas, cuidadas com esmero, carregam a alma da terra em cada gota. E cada rótulo CataraVino é uma homenagem à perseverança, ao trabalho em família e à paixão por criar experiências inesquecíveis.\n\nCataraVino — O sabor da tradição, a elegância do presente, a promessa do futuro.</string>
</resources>